client/src/components/Allocations/Allocations.scss
/*
    Variables and Mixins
*/
@mixin alloc-button {
  .btn {
    border-radius: 0;
    border: 0;
    font: bold 12px Roboto, sans-serif;
    background-color: var(--global-color-accent--normal);
    padding: 0.5rem 1rem;
  }
}
/*
    Components
*/
.allocations-content a {
  padding-left: 0;
}
.allocations-header {
  @include alloc-button();

  a {
    color: var(--global-color-primary--xx-dark);
  }
}
.allocations-sidebar {
  --horizontal-buffer: var(--global-space--section-left);
  /* FAQ: Design is inconsistent across sections, but averages about `10.5px` */
  --vertical-buffer: 0.75rem; /* ~12px (avg. 10.5px design * 1.2 design-to-app ratio */

  --min-width: 200px;

  margin-left: calc(var(--horizontal-buffer) * -1);
  border-right: 1px solid rgb(112 112 112 / 25%);

  padding-top: var(--vertical-buffer);

  .nav-link {
    /* NOTE: These styles match `.nav-content`. That class is not used in
                 the markup for this sidebar because it is extraneous */
    /* RFE: Resolve discrepancy when common Sidebar component exists */
    display: flex;
    align-items: center;

    min-width: var(--min-width);

    color: var(--global-color-primary--dark);
    padding-left: var(--horizontal-buffer);

    &.active,
    &:hover {
      background: var(--global-color-accent--weak);
      color: var(--global-color-primary--x-dark);
    }
    .link-text {
      font-size: 0.75rem; /* 12px (10px design * 1.2 design-to-app ratio) */
      padding-left: 16px;
    }
    &.active,
    &:active {
      font-weight: 700;
    }
  }
}
.allocations-content {
  /* As a flex child */
  flex-grow: 1;

  /* WARNING: Mimicked on: History, Allocation, DataFiles, DataFilesProjectsList, DataFilesProjectFileListing, PublicData */
  padding-top: 1.75rem; /* ~28px (22.5px * design * 1.2 design-to-app ratio) */
  padding-left: 1.5em; /* ~24px (20px * design * 1.2 design-to-app ratio) */
}
.allocations-table {
  tbody {
    tr {
      .system-cell {
        /* Override `.InfiniteScrollTable tbody tr…:not(.-status)` */
        padding: 0 !important;
      }

      /* Override `.InfiniteScrollTable tbody tr…:not(.-status)` */
      background-color: transparent !important;

      border-bottom: 1px solid rgba(#707070, 0.25);
    }
    .sub-table-row {
      width: 100%;

      /* FP-457: Will fix this */ /* stylelint-disable no-descending-specificity */
      :nth-child(even) {
        background-color: rgba(#c6c6c6, 0.1);
      }
      /* stylelint-enable no-descending-specificity */
      color: var(--global-color-primary--x-dark);
    }
    .sub-table-cell {
      background-color: white;
      height: 2.25rem;
      display: flex;
      flex-direction: column;
      justify-content: center;
    }
  }
  .alloc-badge {
    /* NOTE: Consider deleting this style once <Pill> is used */
    font-size: 0.875rem; /* 14px (approved deviation from design) */
  }
}

/* HACK: The loading icon should not need height set, but it fixes Safari here */
/* FP-426: Do not use `height: 100%` or isolate usage pending solution to bigger problem */
.allocations-loading-icon {
  height: auto;
}

